# twilight-bgfx

./: .gitignore  .project  LICENSE  README.md  pom.xml
twilight.bgfx/: .project  README.md  build.properties  pom.xml
twilight.bgfx.eclipse/: .project
twilight.bgfx.eclipse.update/: .project  category.xml  pom.xml
twilight.bgfx.native/: .gitignore  .project  CMakeLists.txt  README.md  pom.xml
twilight.bgfx.native/.externalToolBuilders/: New_Builder.launch
twilight.bgfx.native/arch/: android-x64.cmake  detect_arch.cmake  linux-x64.cmake  macosx-x64.cmake  pnacl.cmake
twilight.bgfx.native/lib/bgfx/macosx-x64/lib/: geometrycRelease  makedisttexRelease  shadercRelease  texturecRelease
twilight.bgfx.native/lib/sdl/linux-x64/include/SDL2/: SDL_config.h  SDL_revision.h
twilight.bgfx.native/lib/sdl/macosx-x64/include/SDL2/: SDL_config.h
twilight.bgfx.native/lib/sdl/pnacl/include/SDL2/: SDL_config.h
twilight.bgfx.native/lib/sdl/pnacl/lib/: libSDL2.la
twilight.bgfx.native/lib/sdl/pnacl/lib/pkgconfig/: sdl2.pc
twilight.bgfx.native/src/: BGFX.cc  NanoVG.cc  PlatformUtil.cc  SDLDisplay.cc  SDLWindow.cc  SVG.cc  TransientIndexBuffer.cc  TransientVertexBuffer.cc  VertexDecl.cc  jni_cache.cc
twilight.bgfx.native/src/include/: jni_cache.h  twilight_bgfx_BGFX.h  twilight_bgfx_PlatformUtil.h  twilight_bgfx_VertexDecl.h  twilight_bgfx_buffers_TransientIndexBuffer.h  twilight_bgfx_buffers_TransientVertexBuffer.h  twilight_bgfx_nanovg_NanoVG.h  twilight_bgfx_window_SDLDisplay.h  twilight_bgfx_window_SDLWindow.h  twilight_bgfx_window_Window.h  twilight_bgfx_window_Window_Rect.h
twilight.bgfx.swt/: .project  pom.xml
twilight.bgfx.target/: .project  pom.xml  twilight.bgfx.target.target
twilight.bgfx.tests/: .project  pom.xml
twilight.bgfx.tests/shaders/: compile.sh  compile2.sh  fs_tile.sc  vs_tile.sc  vs_twl.sc
twilight.bgfx/native/macosx-x64/: libtwilight-bgfx.dylib
twilight.bgfx/src/main/java/shaders/: compile.sh  fs_test.sc  vs_cool.sc
(+66 files in other folders)
